# cansat_main_system

./: READMEE.md
rp_pico/: README.md
rp_pico/arduino_example/: arduino_example.hpp  arduino_example.ino  bme280_a.cpp  bme280_a.hpp  sc_a.cpp  sc_a.hpp
rp_pico/cpp_example/: CMakeLists.txt  bme280.cpp  bme280.hpp  cpp_example.cpp  cpp_example.hpp  sc.cpp  sc.hpp
rp_pico/pico_sdk/: CMakeLists.txt  communication_method_s.hpp  exception_handring_s.hpp  exception_s.hpp  main_example_s.cpp  sensor_processing_s.cpp  sensor_processing_s.hpp  sensor_s.hpp
rp_pico/sc00_cpp_example/: CMakeLists.txt  bme280.hpp  sc.cpp  sc.hpp  sc00_cpp_example.cpp  sc00_cpp_example.hpp
